--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+.container {
+  width: 700px;
+  margin: 0 auto;
+}
+
+.account {
+  border: 1px solid black;
+  margin-bottom: 30px;
+  padding: 5px;
+}
+
+.account-name {
+
+}
